syntax = "proto3";

message DownloadTaskState {
    int32 task_status = 1;
    optional uint32 err_code = 2;
    uint64 speed = 3;
    uint64 upload_speed = 4;
    uint64 download_progress = 5;
    uint64 sum_size = 6;
    optional string group = 7;
}

message DownloadFileParam {
    bytes dec_id = 1;

    bytes file = 2;
    repeated bytes device_list = 3;
    string referer = 4;
    optional string save_path = 5;
    optional string context = 6;
    optional string group = 7;
}

message DownloadFileTaskState {
    uint64 download_progress = 1;
}

message DownloadChunkParam {
    bytes dec_id = 1;

    bytes chunk_id = 2;
    repeated bytes device_list = 3;
    string referer = 4;
    optional string save_path = 5;
    optional string context = 6;
    optional string group = 7;
}

message PublishLocalFile {
    string local_path = 1;
    bytes owner = 2;
    bytes dec_id = 3;
    bytes file = 4;
    uint32 chunk_size = 5;
}

message PublishLocalDir {
    string local_path = 1;
    bytes root_id = 2;
    bytes dec_id = 3;
}
